--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="warp">
-        <header class="hoverNav">
+        <header>
             <div class="head-main clearfix">
                 <div class="head-logo"><a href="#"><h1>摇一摇</h1></a></div>
                 <div class="city-box">
@@ -160,8 +160,7 @@
                             </ul>
                         </div>
                     </header>
-
-                    <div class="cate-list-content">
+                    <div class="cate-list-content clearfix">
                         <ul>
                             <li>
                                 <div class="cate-list-info">
@@ -186,10 +185,16 @@
                         </ul>
 
                     </div>
+                    <footer><a href="#">更多美食团购，请点击查看<i class="icon-angle-right"></i></a></footer>
                 </section>
+
 
             </div>
         </article>
+
+        <footer>
+            <a href="#">微联众网络科技传媒有限公司</a>
+        </footer>
     </div>
 </body>
 </html>
